[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/UI-Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/font/16-UI-Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/UserInterface/Settings/Settings.gd" type="Script" id=3]

[node name="Settings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -420.0
margin_top = -240.0
margin_right = 420.0
margin_bottom = 240.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.5
margin_top = 31.498
margin_right = 77.5
margin_bottom = 64.498
custom_fonts/font = ExtResource( 1 )
text = "Sound Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 121.0
margin_top = -84.0
margin_right = 412.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BacksoundContainer" type="HBoxContainer" parent="SoundContainer"]
margin_right = 291.0
margin_bottom = 41.0

[node name="Backsound" type="Label" parent="SoundContainer/BacksoundContainer"]
margin_top = 4.0
margin_right = 143.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Backsound"

[node name="CheckBoxBacksound" type="CheckBox" parent="SoundContainer/BacksoundContainer"]
margin_left = 147.0
margin_right = 291.0
margin_bottom = 41.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 1 )
text = "OFF"
align = 1

[node name="SFXContainer" type="HBoxContainer" parent="SoundContainer"]
margin_top = 45.0
margin_right = 291.0
margin_bottom = 86.0

[node name="SFX" type="Label" parent="SoundContainer/SFXContainer"]
margin_top = 4.0
margin_right = 143.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Sound FX "

[node name="CheckBoxSFX" type="CheckBox" parent="SoundContainer/SFXContainer"]
margin_left = 147.0
margin_right = 291.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "OFF"
align = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -179.367
margin_top = -66.1921
margin_right = -29.3669
margin_bottom = -26.1921
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ButtonContainer"]
margin_right = 73.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Apply" type="Button" parent="ButtonContainer"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Apply"
[connection signal="pressed" from="SoundContainer/BacksoundContainer/CheckBoxBacksound" to="." method="_on_CheckBoxBacksound_pressed"]
[connection signal="pressed" from="SoundContainer/SFXContainer/CheckBoxSFX" to="." method="_on_CheckBoxSFX_pressed"]
[connection signal="pressed" from="ButtonContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ButtonContainer/Apply" to="." method="_on_Apply_pressed"]
